[tool.poetry]
name = "simple-page"
version = "0.1.0"
description = "This is my first simple web page on python"
authors = ["RotterPotter <kivilele@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
